kubernetes/apps/openfaas/openfaas/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/preserve-host: "true"
    external-dns.alpha.kubernetes.io/target: "ingress.${SECRET_DOMAIN}"
  name: openfaas-gateway
  namespace: openfaas
spec:
  ingressClassName: ingress-traefik
  rules:
    - host: &host "fn.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: gateway
                port:
                  number: 8080
  tls:
    - hosts:
        - *host
